# ecs-demo

./: CMakeLists.txt  README.md
Shaders/: fragment.glsl  vertex.glsl
Source/: Main.cpp  WindowManager.cpp  WindowManager.hpp
Source/Graphics/: GlLoader.cpp  GlLoader.hpp  Shader.hpp
